[package]
name = "k256_flow"
description = """
Flow-Rust-SDK Version of k256
secp256k1 elliptic curve library written in pure Rust with support for ECDSA
signing/verification (including Ethereum-style signatures with public-key
recovery), Elliptic Curve Diffie-Hellman (ECDH), and general purpose secp256k1
curve arithmetic useful for implementing arbitrary group-based protocols.

Heavily modified for signing Flow blockchain transactions
"""
version = "1.0.0" # Also update html_root_url in lib.rs when bumping this
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RustCrypto/elliptic-curves/tree/master/k256"
readme = "README.md"
edition = "2018"
categories = ["cryptography", "cryptography::cryptocurrencies", "no-std"]
keywords = ["bitcoin", "crypto", "ecc", "ethereum", "secp256k1"]

[dependencies]
cfg-if = "1.0"
elliptic-curve-flow = "1.0.0"

# optional dependencies
ecdsa-core = { version = "1.0.0", package = "ecdsa-flow", optional = true, default-features = false, features = ["der"] }
hex-literal = { version = "0.3", optional = true }
sha3 = { version = "0.9", optional = true, default-features = false }

[dev-dependencies]
blobby = "0.3"
criterion = "0.3"
ecdsa-core = { version = "1.0.0", package = "ecdsa-flow", default-features = false, features = ["dev"] }
hex-literal = "0.3"
num-bigint = "0.4"
num-traits = "0.2"
proptest = "1.0"
rand_core = { version = "0.6", features = ["getrandom"] }

[features]
default = ["arithmetic", "ecdsa", "pkcs8", "sha256", "std"]
arithmetic = ["elliptic-curve-flow/arithmetic"]
bits = ["arithmetic", "elliptic-curve-flow/bits"]
digest = ["ecdsa-core/digest", "ecdsa-core/hazmat"]
ecdh = ["arithmetic", "elliptic-curve-flow/ecdh"]
ecdsa = ["arithmetic", "digest", "ecdsa-core/sign", "ecdsa-core/verify"]
expose-field = ["arithmetic"]
jwk = ["elliptic-curve-flow/jwk"]
keccak256 = ["digest", "sha3"]
pem = ["elliptic-curve-flow/pem", "pkcs8"]
pkcs8 = ["elliptic-curve-flow/pkcs8"]
sha256 = ["digest", "sha3"]
std = ["ecdsa-core/std", "elliptic-curve-flow/std"] # TODO: use weak activation for `ecdsa-core/std` when available
test-vectors = ["hex-literal"]

[package.metadata.docs.rs]
features = ["ecdh", "ecdsa", "sha256", "keccak256"]
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "ecdsa"
path = "bench/ecdsa.rs"
harness = false
required-features = ["ecdsa", "sha256"]

[[bench]]
name = "field"
path = "bench/field.rs"
harness = false
required-features = ["expose-field"]

[[bench]]
name = "scalar"
path = "bench/scalar.rs"
harness = false
